add dismiss/sleep_duration/gametype preference; revamped GUI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,8 +26,11 @@
     <string name="button_snooze">Snooze</string>
     <string name="button_done">DONE</string>
 
-
     //NOTIFICATION
     <string name="ticker_title">Next Alarm at: </string>
+
+    //MATHGAME TEXT
+    <string name="game_score"><u>Score</u></string>
+    <string name="game_empty_answer">Enter Answer Here</string>
 
 </resources>
