removed saved userID activity; Socialize button opens listView of users to select; scoreboard context menu still INCOMPLETE

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,8 @@
         sending the fetched token to the server or subscribing to the PubSub topic. Please try
         running the sample again.</string>
 
+    //REQUEST ACTIVITY
+    <string name="request_instruction">Please hold and select a user to request to WakeYouUp!</string>
 
     //SCOREBOARD
     <string name="scoreboard_username">USERNAME</string>
